--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -80,9 +80,9 @@
                     <a href="" class="link">О нас</a>
                     <div class="links_block">
                         <a href="{% url 'fire_page' %}" class="link">Станислав Саначев</a>
-                        <a href="" class="link">Ульяна Комарова</a>
-                        <a href="" class="link">Ирина Лукацкая</a>
-                        <a href="" class="link">Ирина Свирина</a>
+                        <a href="{% url 'earth_page' %}" class="link">Ульяна Комарова</a>
+                        <a href="{% url 'water_page' %}" class="link">Ирина Лукацкая</a>
+                        <a href="{% url 'air_page' %}" class="link">Ирина Свирина</a>
                     </div>
                     <a href="" class="link">Наш метод</a>
                     <div class="links_block">
