--- a/main/templates/main/air_page.html
+++ b/main/templates/main/air_page.html
@@ -82,8 +82,31 @@
     </div>
 
     <div class="svirina_bottom">
-        <img class="bird" src="{% static 'main/images/person_page/opacity_bird.svg' %}" alt="">
-        <img class="circle" src="{% static 'main/images/person_page/circle.svg' %}" alt="">
+
+        <div class="container">
+            <div class="top">
+                <p>
+                    <span>Осознать непонятое – расстаться с навязчивыми мыслями, которые скрывали главное</span>
+                </p>
+            </div>
+            <div class="middle">
+                <p>
+                    <span>Понять смысл своего симптома – освободиться от него навсегда</span>
+                </p>
+            </div>
+            <div class="bottom">
+                <p>
+                    <span>Обрести безопасность внутри себя – проститься с тревогой</span>
+                </p>
+            </div>
+
+            <div class="bird_block">
+                <img src="{% static 'main/images/person_page/blue_light.svg' %}" alt="" class="light">
+                <img class="bird" src="{% static 'main/images/person_page/opacity_bird.svg' %}" alt="">
+            </div>
+            <img class="circle" src="{% static 'main/images/person_page/circle.svg' %}" alt="">
+            <img src="{% static 'main/images/person_page/blue_light2.svg' %}" alt="" class="light_main">
+        </div>
     </div>
 
 {% endblock %}
