--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -26,6 +26,9 @@
 
     <header>
         <div class="header_wrapper container">
+
+            <div class="decor"></div>
+
             <div class="logo">
                 <img src="{% static 'main/images/logo.svg' %}" alt="">
                 <p>сверх ты</p>
