--- a/main/static/main/person_page/person_page.scss
+++ b/main/static/main/person_page/person_page.scss
@@ -285,6 +285,7 @@
             }
 
             &.svirina {
+                align-items: center;
                 p {
                     &.top {
                         max-width: 290px;
