--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -82,6 +82,11 @@
     </div>
 
     <div class="container scenaries">
+
+
+
+
+
         <div class="scenaries_item a active" onclick="openDescription(event)">
             <div class="description">
                 <div class="title_block">
@@ -105,6 +110,7 @@
                 <h4>Потеря смысла</h4>
             </div>
         </div>
+
         <div class="scenaries_item b" onclick="openDescription(event)">
             <div class="description">
                 <div class="title_block">
@@ -206,7 +212,7 @@
         <div class="scenaries_item f" onclick="openDescription(event)">
             <div class="description">
                 <div class="title_block">
-                    <h4>Дипрессия</h4>
+                    <h4>Депрессия</h4>
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g opacity="0.6">
                         <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
